--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -17,13 +17,14 @@
   margin: 0 auto 24rpx;
 }
 .goods-box .img-box{
-  width: 300rpx;
+  width: 250rpx;
   overflow: hidden;
   float: left;
   margin-right: 30rpx;
 }
 .goods-box .img-box image{
   width: 100%;
+  height: 300rpx;
 }
 .goods-box .goods-title{
   width: 360rpx;
