--- a/miniprogram/pages/addBook/index.wxml
+++ b/miniprogram/pages/addBook/index.wxml
@@ -22,6 +22,28 @@
         </view>
       </view>
       <view class="row-wrap">
+        <view class="label">*书架位置</view>
+        <view class="label-right">
+          <input name="bookshelvesLocation" class="input" type="text" hidden value="{{bookshelvesVal}}" />
+          <picker mode="multiSelector" value="{{bookshelvesIdex}}" bindchange="bindMultiPickerChange" range="{{bookshelves}}">
+            <view class="picker">
+              {{ bookshelves[0][bookshelvesIdex[0]]}}{{bookshelves[1][bookshelvesIdex[1]]}}
+            </view>
+          </picker>
+        </view>
+      </view>
+      <view class="row-wrap">
+        <view class="label">*类别</view>
+        <view class="label-right">
+          <input name="category" class="input" type="text" hidden value="{{categoryVal}}" />
+          <picker value="{{categoryIdex}}" bindchange="bindCategoryPickerChange" range="{{categories}}">
+            <view class="picker">
+              {{ categories[categoryIdex] }}
+            </view>
+          </picker>
+        </view>
+      </view>
+      <view class="row-wrap">
         <view class="label">作者</view>
         <view class="label-right">
           <input name="author" class="input" type="text" placeholder="作者" value="{{bookData.author}}" />
@@ -43,13 +65,13 @@
       <view class="row-wrap textarea-wrap">
         <view class="label">内容推荐</view>
         <view class="textarea-right">
-          <textarea name="summary" auto-height placeholder="内容推荐" value="{{bookData.summary}}" />
+          <textarea name="summary" placeholder="内容推荐" value="{{bookData.summary}}" />
         </view>
       </view>
       <view class="row-wrap textarea-wrap">
         <view class="label">目录</view>
         <view class="textarea-right">
-          <textarea name="catalog" auto-height placeholder="目录" value="{{bookData.catalog}}" />
+          <textarea name="catalog" placeholder="目录" value="{{bookData.catalog}}" />
         </view>
       </view>
     </view>
